app/assets/stylesheets/accounts.css.scss
#accounts {
  text-align: center;

  #configure_btn {
    margin-left: 5px;
  }

  .pushed-down {
    margin-top: 30px;
  }

  #show_all_tiles_btn {
    width: 100px;
  }

  span.num-accounts {
    line-height: 14px;
    font-size: 14px;
    font-weight: bold;
  }
  #add_account_btn {
    margin-left: 5px;
  }
}

#accounts_list_search {
  margin: 0;
}

#account_tiles {
  text-align: left;
  @media (min-width: 1200px) { padding-left: 1px; }

  .account-tile {
    width: 100%;
    @media (min-width: 1200px) { width: 292px; }
    @media (min-width: 980px) and (max-width: 1199px) { width: 313px; }
    @media (min-width: 768px) and (max-width: 979px) { width: 362px; }
  }
  .account-tile-inner {
    margin: 0 5px 10px 5px;
    padding: 5px;
    background-color: #f5f5f5;
    border: 1px solid #e3e3e3;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
  }

  .read {
    table {
      width: 100%;
    }
    th {
      padding: 0 0 5px 0;
    }
    th.account {
      text-align: left;
    }
    th.edit-link {
      text-align: right;
      vertical-align: top;
      width: 45px;
    }
    td.field-label {
      width: 15px;
      text-align: right;
      padding-right: 3px;
    }
    input[type='text'] {
      margin: 0;
    }
    input.username,input.password {
      cursor: default;
      background-color: #eee;
    }
    td.no-notes {
      color: #aaa;
    }
    td.notes,td.no-notes {
      text-align: center;
      padding-top: 5px;
    }
    p.notes {
      text-align: left;
      border: none;
      padding: 5px;
      margin: 5px 0 0 0;
      background-color: #fff;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
      border-radius: 4px;
    }
  }

  .write {
    table {
      width: 100%;
    }
    td.field-label {
      width: 15px;
      text-align: right;
      padding-right: 3px;
    }
    form,input[type='text'],input[type='url'],textarea {
      margin: 0;
    }
    .form-inline {
      text-align: center;
      margin: 5px 0;
      button {
        margin-right: 5px;
      }
    }
    .actions {
      margin-top: 5px;
    }
  }
}

